--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
-  "url": "https://fragment.com/", 
-  "name": "Fragment",                   
+  "url": "https://ton-airdrops.vercel.app/", 
+  "name": "TON Airdrop",                   
   "iconUrl": "https://fragmentclub.vercel.app/logo.jpg"
 }
 
